# CNC

./: .assistant-policy.md  .gitignore  LICENSE  Makefile  README.md  README_OLD.md  VERIFICATION_GUIDE.md  advanced-image-editor.code-workspace  debug_runner.py  debug_xy_runner.py  env_setup.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup_platform.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: platform-setup.yml
archived/common/: utils.py
common/: driver.py  gcode.py  utils.py
common/drivers/: __init__.py  base.py
dev/: README.md
dev/scripts/: setup.sh  setup_dev_environment.py
docs/: QT-BMM2_commands__extracted_.csv  developer-guide.md  index.md  refactor-spec.md  user-guide.md
examples/: [REAL]job_svg_path_chuo.yaml  [SIM]select_SVG.yaml  job_svg.yaml  job_svg_chuo.yaml
examples/example_xy/: REAL_job_svg_path_chuo.yaml  REAL_job_svg_path_gsc02.yaml  SIM_grid_circles_default_pattern.yaml  SIM_sample_SVG.yaml  SIM_select_SVG.yaml
examples/example_xyz/: fast_animation.yaml  multi_step.yaml  spiral_sample.yaml
scripts/: QUICK_RUN.md  README.md  setup.sh  setup_dev_environment.py
src/: xy_runner.py
src/cnc_tools/: __init__.py  setup_platform.py
src/common/: README.md  __init__.py
src/common/drivers/: README.md  __init__.py  actual_machine_control.py  chuo_stage_driver.py  gsc02_controller.py  gsc02_stage_driver.py  qtbmm2_controller.py
src/xy_runner/: __init__.py  xy_runner.py
src/xyz_runner/: xyz_runner.py
xy_runner/: run_xy_runner.bat  xy_runner.py
xy_runner/examples/: [SIM]grid_circles_default_pattern.yaml  [SIM]sample_SVG.yaml
xyz_runner/: run_xyz_runner.bat  run_xyz_runner.sh  xyz_runner.py
xyz_runner/example/: cube_sample.yaml  gcode_sample.yaml  grid_spheres.yaml  step_sample.yaml
xyz_runner/examples/: cube_sample.yaml  fast_animation.yaml  gcode_sample.yaml  grid_spheres.yaml  multi_spheres.stp  multi_step.yaml  sphere_sample.stp  spiral_sample.yaml  step_sample.yaml  z_zero_start.yaml
