[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cnc-xy-runner"
version = "1.0.0"
description = "PowerPoint to CNC: SVG path-based XY controller for Chuo Seiki machines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TIT Management", email = "info@titmanagement.com"}
]
keywords = ["cnc", "svg", "powerpoint", "chuo-seiki", "automation", "manufacturing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "pyserial>=3.5",
    "svgpathtools>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/TITManagement/CNC"
Repository = "https://github.com/TITManagement/CNC"
Issues = "https://github.com/TITManagement/CNC/issues"

[project.scripts]
cnc-xy-runner = "src.xy_runner:main"
cnc-platform-setup = "cnc_tools.setup_platform:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.svg"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true